<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="accenture.amrefdemo.Quiz"
    android:background="@color/white">

    <TextView
        android:id="@+id/questionText"
        android:text="@string/hello_world"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_marginTop="10dp"/>
    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/copyright"
        android:layout_alignParentRight="true"
        android:text="@string/next"
        android:onClick="onClick"
        />
    <Button
        android:id="@+id/ans1Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/questionText"
        android:text="@string/answer1"
        android:onClick="onClick"
        />
    <Button
        android:id="@+id/ans2Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ans1Button"
        android:text="@string/answer2"
        android:onClick="onClick"
        />
    <Button
        android:id="@+id/ans3Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ans2Button"
        android:text="@string/answer3"
        android:onClick="onClick"
        />
    <Button
        android:id="@+id/ans4Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ans3Button"
        android:text="@string/answer4"
        android:onClick="onClick"
        />
    <Button
        android:id="@+id/ans5Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ans4Button"
        android:text="@string/answer5"
        android:onClick="onClick"
        />

    <EditText
        android:id="@+id/textResponse"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/questionText"
        android:layout_above="@+id/nextButton"/>
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#FC9"
        android:gravity="center" >

        <Button
            android:id="@+id/backToTopic"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:gravity="center"
            android:text="@string/header"
            android:textColor="#000"
            android:textSize="17sp"
            android:background="#FFBB33"
            style="?android:attr/borderlessButtonStyle"
            android:drawableLeft="@drawable/home"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/copyright"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:textSize="8dp"
        android:textColor="@color/black"
        android:layout_alignParentBottom="true"
        android:text="@string/copyright"

        />

</RelativeLayout>
