<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="accenture.amrefdemo.Topic"
    android:background="@color/white">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:layout_marginTop="15dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <Button
                android:id = "@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/topic1"
                android:gravity= "center_vertical"
                android:onClick="onClick"
                />
            <Button
                android:id = "@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/button1"
                android:gravity= "center_vertical"
                android:text="@string/topic2"
                android:onClick="onClick"

                />
            <Button
                android:id = "@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/button2"
                android:gravity= "center_vertical"
                android:text="@string/topic3"
                android:state_enabled = "false"
                style="?android:attr/borderlessButtonStyle"
                />
            <Button
                android:id = "@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/button3"
                android:gravity= "center_vertical"
                android:text="@string/topic4"
                android:state_enabled = "false"
                style="?android:attr/borderlessButtonStyle"
                />
            <Button
                android:id = "@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/button4"
                android:gravity= "center_vertical"
                android:text="@string/topic5"
                android:state_enabled = "false"
                style="?android:attr/borderlessButtonStyle"
                />
            <Button
                android:id = "@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/button5"
                android:gravity= "center_vertical"
                android:text="@string/topic6"
                android:state_enabled = "false"
                style="?android:attr/borderlessButtonStyle"
                />
            <Button
                android:id = "@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/button6"
                android:gravity= "center_vertical"
                android:text="@string/topic7"
                android:state_enabled = "false"
                style="?android:attr/borderlessButtonStyle"
                />
            <Button
                android:id = "@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/button7"
                android:gravity= "center_vertical"
                android:text="@string/topic8"
                android:state_enabled = "false"
                style="?android:attr/borderlessButtonStyle"
                />
            <Button
                android:id = "@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/button8"
                android:gravity= "center_vertical"
                android:text="@string/topic9"
                android:state_enabled = "false"
                style="?android:attr/borderlessButtonStyle"
                />
            <Button
                android:id = "@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/button9"
                android:gravity= "center_vertical"
                android:text="@string/search"

                />
            <TextView
                android:id="@+id/note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/search"
                android:text="@string/topicsavailable"/>
            <TextView
                android:id="@+id/copyright"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textSize="8dp"
                android:textColor="@color/black"
                android:layout_alignParentBottom="true"
                android:text="@string/copyright"
                android:layout_below="@+id/note"
                />

        </RelativeLayout>

        </ScrollView>




</RelativeLayout>
