<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="accenture.amref.AboutHelp">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        >
        <RelativeLayout
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/ahTitle"
                android:text="@string/title_activity_about_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="25sp"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                />
            <TextView
                android:id="@+id/vision"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/ahTitle"
                android:text="@string/vision"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:gravity="center|left"/>
            <TextView
                android:id="@+id/mission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_below="@+id/vision"
                android:text="@string/mission"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:gravity="center|left"/>
            <Button
                android:id = "@+id/helpYoutube"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/mission"
                android:text="@string/video"
                android:layout_marginTop="8dp"
                android:gravity="left|center_vertical"
                android:onClick="onClick"
                />
            <Button
                android:id = "@+id/website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/helpYoutube"
                android:text="@string/website"
                android:gravity="left|center_vertical"
                android:onClick="onClick"
                />
            <Button
                android:id = "@+id/partners"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/partners"
                android:layout_below="@+id/website"
                android:gravity="left|center_vertical"
                android:onClick="onClick"
                />
            <Button
                android:id = "@+id/pedagody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/partners"
                android:gravity="left|center_vertical"
                android:text="@string/pedagogy"
                android:onClick="onClick"
                />
            <Button
                android:id = "@+id/news"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="left|center_vertical"
                android:layout_below="@+id/pedagody"
                android:text="@string/news"
                android:onClick="onClick"
                />
            <TextView
                android:id="@+id/copyright"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textSize="8dp"
                android:textColor="@color/black"
                android:layout_alignParentBottom="true"
                android:text="@string/copyright"
                android:layout_below="@+id/news"
                />


        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
