<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="accenture.amref.News">

    <TextView android:text="@string/news"
        android:id="@+id/featTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true" />
    <TextView
        android:id="@+id/news1"
        android:text="@string/newsLink1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/featTitle"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:textSize="15dp"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/news2"
        android:text="@string/newsLink2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/news1"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="15dp"
        android:textColor="@color/black"

        />
    <TextView
        android:id="@+id/news3"
        android:text="@string/newsLink3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/news2"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="15dp"
        android:textColor="@color/black"
           />
    <TextView
        android:id="@+id/copyright"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:textSize="8dp"
        android:textColor="@color/black"
        android:layout_alignParentBottom="true"
        android:text="@string/copyright"
        />

</RelativeLayout>
