<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="accenture.amrefdemo.Demo"
    android:background="@color/white">

    <TextView
        android:id="@+id/txt_msg"
        android:text="@string/txt_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines = "100"
        android:scrollbars="vertical"
        android:scrollbarStyle="insideOverlay"
        android:fadeScrollbars="true"
        android:layout_below="@+id/header"
        android:layout_above="@+id/footer"
        android:gravity="bottom"
        />
    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_above="@+id/copyright">
        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/next"
            android:onClick="onClick"
            />

        <Button
            android:id="@+id/audioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:text="@string/audio"
            android:onClick="onClick"
            />
        <Button
            android:id="@+id/recordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/audioButton"
            android:layout_toRightOf="@+id/audioButton"
            android:text="@string/record"
            android:onClick="onClick"
            />
        <Button
            android:id="@+id/stopButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/audioButton"
            android:layout_toRightOf="@+id/audioButton"
            android:text="@string/stop"
            android:onClick="onClick"
            />
        <Button
            android:id="@+id/pauseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:text="@string/pause"
            android:onClick="onClick"
            />
        </RelativeLayout>

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#FC9"
        android:gravity="center" >

        <Button
            android:id="@+id/backToTopic"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:gravity="center"
            android:textColor="#000"
            android:textSize="17sp"
            android:background="#FFBB33"
            style="?android:attr/borderlessButtonStyle"
            android:drawableLeft="@drawable/home"/>

    </RelativeLayout>
    <TextView
        android:id="@+id/copyright"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:textSize="8dp"
        android:textColor="@color/black"
        android:layout_alignParentBottom="true"
        android:text="@string/copyright"
        />
</RelativeLayout>
