<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context="accenture.amref.Pedagogy">
<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="fill_parent">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/pedagogyTitle"
            android:text="@string/pedagogy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:id="@+id/pI1"
            android:text="@string/pedagogyInfo1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pedagogyTitle"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:textSize="15dp"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/pI2"
            android:text="@string/pedagogyInfo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pI1"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:textSize="15dp"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/pI3"
            android:text="@string/pedagogyInfo3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pI2"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:textSize="15dp"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/pI4"
            android:text="@string/pedagogyInfo4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pI3"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:textSize="15dp"
            android:textColor="@color/black"
            />
         <ImageView
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:src="@drawable/pedagogy"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/pI4"/>


    </RelativeLayout>
    </ScrollView>
    <TextView
        android:id="@+id/copyright"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:textSize="8dp"
        android:textColor="@color/black"
        android:layout_alignParentBottom="true"
        android:text="@string/copyright"
        />
</RelativeLayout>
